@@ -20,35 +20,22 @@ if(NOT TEXMFLOCALDIR)
 	message(SEND_ERROR "Couldn't find TEXMFLOCAL directory.")
 endif(NOT TEXMFLOCALDIR)
 
-set(extramgl Axis_projection Vectorial)
-
-add_custom_command(OUTPUT scripts
-    COMMAND ${CMAKE_COMMAND} -E make_directory ${MathGL_BINARY_DIR}/mgltex/scripts
-    COMMAND ${CMAKE_COMMAND} -E copy ${MathGL_SOURCE_DIR}/mgltex/sample.tex ${MathGL_BINARY_DIR}/mgltex/
-    COMMAND ${CMAKE_COMMAND} -E copy ${MathGL_SOURCE_DIR}/mgltex/mgltex.sty ${MathGL_BINARY_DIR}/mgltex/
-    COMMAND ${findpdflatex} -draftmode sample.tex
-)
-foreach(mglscr ${extramgl})
-	list(APPEND mglpng scripts/${mglscr}.png)
-	add_custom_command(OUTPUT scripts/${mglscr}.png
-		COMMAND mglconv -o ${mglscr}.png ${mglscr}.mgl
-		DEPENDS mglconv scripts
-		WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/mgltex/scripts/
-	)
-endforeach(mglscr)
-
-add_custom_command(OUTPUT scripts/sample.png
-	COMMAND mglconv -o scripts/sample.png scripts/sample.mgl
-	DEPENDS mglconv scripts
-)
+# set(extramgl Axis_projection Vectorial)
 
 add_custom_command(OUTPUT sample.pdf
-	COMMAND ${findpdflatex} sample.tex
-	DEPENDS mgltex.sty sample.tex ${mglpng} scripts/sample.png)
+	COMMAND ${CMAKE_COMMAND} -E make_directory ${MathGL_BINARY_DIR}/mgltex/MGL
+	COMMAND ${CMAKE_COMMAND} -E make_directory ${MathGL_BINARY_DIR}/mgltex/MGL/scripts
+	COMMAND ${CMAKE_COMMAND} -E make_directory ${MathGL_BINARY_DIR}/mgltex/MGL/backups
+	COMMAND ${CMAKE_COMMAND} -E make_directory ${MathGL_BINARY_DIR}/mgltex/MGL/graphics
+	COMMAND ${CMAKE_COMMAND} -E copy ${MathGL_SOURCE_DIR}/mgltex/sample.tex ${MathGL_BINARY_DIR}/mgltex/
+	COMMAND ${CMAKE_COMMAND} -E copy ${MathGL_SOURCE_DIR}/mgltex/mgltex.sty ${MathGL_BINARY_DIR}/mgltex/
+	COMMAND ${findpdflatex} --shell-escape -draftmode sample.tex
+	COMMAND ${findpdflatex} --shell-escape sample.tex
+	DEPENDS mgltex.sty sample.tex )
 add_custom_target(pdf ALL DEPENDS sample.pdf)
 
 get_directory_property(mglconv_clean ADDITIONAL_MAKE_CLEAN_FILES)
-set(mglconv_clean ${mglconv_clean} scripts sample.sty sample.tex sample.aux sample.log)
+set(mglconv_clean ${mglconv_clean} scripts mgltex.sty sample.tex sample.aux sample.log)
 set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${mglconv_clean}")
 
 install(FILES mgltex.sty DESTINATION ${TEXMFLOCALDIR}/tex/latex/mgltex/)
